--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,8 +1,8 @@
 book_filename: "introduction_au_tidyverse"
-repo: https://github.com/juba/tidyverse/
+repo: https://github.com/ClaudeGrasland/bivaR
 delete_merged_file: true
 output_dir: "_book"
-edit: https://github.com/juba/tidyverse/blob/main/%s
+edit: https://github.com/ClaudeGrasland/bivR/blob/main/%s
 language:
   ui:
     chapter_name: "Partie "
