--- a/_output.yml
+++ b/_output.yml
@@ -1,7 +1,7 @@
 bookdown::gitbook:
   dev: svglite
   highlight: kate
-  css: css/bivaR.css
+  css: css/tidyverse.css
   self_contained: false
   df_print: default
   split_by: rmd
