--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -14,6 +14,7 @@ rmd_files: [
   "01-principes.Rmd",
   "02-initiation.Rmd",
   "03-R-Base.Rmd",
-  "04-Corrélation.Rmd"
+  "04-Corrélation.Rmd",
+  "05-Régression.Rmd"
 ]
 
