--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -15,6 +15,7 @@ rmd_files: [
   "02-initiation.Rmd",
   "03-R-Base.Rmd",
   "04-Corrélation.Rmd",
-  "05-Régression.Rmd"
+  "05-Régression.Rmd",
+  "06-Anova.Rmd"
 ]
 
