chap7 chi-2 & survey

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -17,6 +17,7 @@ rmd_files: [
   "04-Corrélation.Rmd",
   "05-Régression.Rmd",
   "06-Anova.Rmd",
+  "07-Tabcont.Rmd",
   "08-Graphique-Base.Rmd",
   "09-Graphique-ggplot.Rmd"
   
