--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -19,7 +19,8 @@ rmd_files: [
   "06-Anova.Rmd",
   "07-Tabcont.Rmd",
   "08-Graphique-Base.Rmd",
-  "09-Graphique-ggplot.Rmd"
+  "09-Graphique-ggplot.Rmd",
+  "10-Graphique-dvf.Rmd"
   
 ]
 
